--- a/index.html
+++ b/index.html
@@ -25,23 +25,40 @@
 
     <!--Navbar-->
     <header class="header">
-        <nav class="container navbar navbar-expand-md fixed-top navbar-light bg-light ">
+        <nav class=" navbar navbar-expand-md fixed-top navbar-light bg-light ">
             <div class="container bg-danger">
-                <div class="row align-middle d-flex align-items-">
-                    <div class="col-sm-4 col-md-2 col-4 d-flex align-items-end flex-column  ">
+                <div class="row h-100 align-items-center">
+                    <div class="col-2 ">
                         <a class="navbar-brand" href="javascript:void(0)" title="Trade Me- Life lives here">
                             <img src="./assets/image/clipart1855289.png" class="logo ps-0 py-1 w-100">
                         </a>
 
                     </div>
 
-                    <div class="col-sm-8 col-md-4 col-xs-8 d-flex align-items-end flex-column bg-dark ">
-                        <div class="box-top-menu">
-                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-                                <li class="nav-item ">
-                                    <a class="nav-item" href="#"><i class="fa-solid fa-cart-plus"></i> WatchList</a>
+                    <div class="col-6 offset-4 bg-dark py-3 ">
+                        <div class="row nav d-flex flex-nowrap">
+                            <div class="col-3 justify-content-center offset-1 bg-info">
+                                <li class="nav-item order-0">
+                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
+                                        <i class="fa-solid fa-cart-plus"></i>WatchList</a>
                                 </li>
-                            </ul>
+                            </div>
+                            <div class="col-3 justify-content-center bg-secondary">
+                                <li class="nav-item ">
+                                    <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
+                                </li>
+                            </div>
+                            <div class="col-3 justify-content-center bg-body ">
+                                <li class="nav-item ">
+                                    <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
+                                </li>
+                            </div>
+                            <div class="col-3 justify-content-center bg-success">
+                                <li class="nav-item ">
+                                    <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
+                                </li>
+                            </div>
+
                         </div>
                     </div>
                 </div>
