--- a/index.html
+++ b/index.html
@@ -35,30 +35,32 @@
 
                     </div>
 
-                    <div class="col-6 offset-4 bg-dark py-3 ">
-                        <div class="row nav d-flex flex-nowrap">
-                            <div class="col-3 justify-content-center offset-1 bg-info">
-                                <li class="nav-item order-0">
-                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
-                                        <i class="fa-solid fa-cart-plus"></i>WatchList</a>
-                                </li>
-                            </div>
-                            <div class="col-3 justify-content-center bg-secondary">
-                                <li class="nav-item ">
-                                    <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
-                                </li>
-                            </div>
-                            <div class="col-3 justify-content-center bg-body ">
-                                <li class="nav-item ">
-                                    <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
-                                </li>
-                            </div>
-                            <div class="col-3 justify-content-center bg-success">
-                                <li class="nav-item ">
-                                    <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
-                                </li>
-                            </div>
+                    <div class="col-5 offset-5 bg-dark py-3 px-5">
+                        <div class="container px-4">
+                            <div class="row nav d-flex flex-nowrap m-auto gx-1">
+                                <div class="col-3 justify-content-center ms-auto bg-info">
+                                    <li class="nav-item order-0">
+                                        <a class="nav-link active" aria-current="page" href="javascript:void(0)">
+                                            <i class="fa-solid fa-cart-plus"></i>WatchList</a>
+                                    </li>
+                                </div>
+                                <div class="col-3 p-3 justify-content-center bg-secondary">
+                                    <li class="nav-item ">
+                                        <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
+                                    </li>
+                                </div>
+                                <div class="col-3 p-3 justify-content-center bg-body ">
+                                    <li class="nav-item ">
+                                        <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
+                                    </li>
+                                </div>
+                                <div class="col-3 p-3 justify-content-center bg-success">
+                                    <li class="nav-item ">
+                                        <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
+                                    </li>
+                                </div>
 
+                            </div>
                         </div>
                     </div>
                 </div>
