--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="header">
         <nav class=" navbar navbar-expand-md fixed-top navbar-light bg-light ">
             <div class="container bg-danger">
-                <div class="row h-100 align-items-center">
+                <div class="row h-100 align-items-center px-1">
                     <div class="col-2 ">
                         <a class="navbar-brand" href="javascript:void(0)" title="Trade Me- Life lives here">
                             <img src="./assets/image/clipart1855289.png" class="logo ps-0 py-1 w-100">
@@ -35,32 +35,50 @@
 
                     </div>
 
-                    <div class="col-5 offset-5 bg-dark py-3 px-5">
-                        <div class="container px-4">
-                            <div class="row nav d-flex flex-nowrap m-auto gx-1">
-                                <div class="col-3 justify-content-center ms-auto bg-info">
-                                    <li class="nav-item order-0">
-                                        <a class="nav-link active" aria-current="page" href="javascript:void(0)">
-                                            <i class="fa-solid fa-cart-plus"></i>WatchList</a>
-                                    </li>
-                                </div>
-                                <div class="col-3 p-3 justify-content-center bg-secondary">
-                                    <li class="nav-item ">
-                                        <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
-                                    </li>
-                                </div>
-                                <div class="col-3 p-3 justify-content-center bg-body ">
-                                    <li class="nav-item ">
-                                        <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
-                                    </li>
-                                </div>
-                                <div class="col-3 p-3 justify-content-center bg-success">
-                                    <li class="nav-item ">
-                                        <a class="nav-link " aria-current="page" href="javascript:void(0)">Active</a>
-                                    </li>
-                                </div>
+                    <div class="col-4 offset-6 bg-dark py-3 px-1">
+                        <div class="nav d-flex flex-row m-auto gx-1">
+                            <ul class="navbar-nav d-flex me-auto mb-2 mb-lg-0">
+                                <li class="nav-item d-none d-lg-block d-xl-none">
+                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
+                                        <img src="./assets/icon/binoculars.svg" class="mh-100"
+                                            style="width: 30x; height: 30px;"> WatchList </a>
+                                </li>
+                                <li class="nav-item  d-none d-lg-block d-xl-none">
+                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
+                                        <img src="./assets/icon/love.svg" class="mh-100"
+                                            style="width: 30x; height: 30px;"> Favourites </a>
+                                </li>
+                                <li class="nav-item d-none d-lg-block d-xl-none ">
+                                    <a class="nav-link " aria-current="page" href="javascript:void(0)">
+                                        <img src="./assets/icon/pencil.svg" class="mh-100"
+                                            style="width: 30x; height: 30px;"> Start a listing </a>
+                                </li>
+                                <li class="nav-item d-block">
+                                    <a class="nav-link " aria-current="page" href="javascript:void(0)">Trade Of Me
+                                        <img src="./assets/icon/user.svg" class="mh-100"
+                                            style="width: 30x; height: 30px;"></a>
+                                </li>
 
-                            </div>
+                                <!-- <div class=" justify-content-center ms-auto bg-info">
+                                <li class="nav-item ">
+                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
+                                        <i class="fa-solid fa-cart-plus"></i>WatchList</a>
+                                </li>
+                                <li class="nav-item ">
+                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
+                                        <i class="fa-solid fa-cart-plus"></i>WatchList</a>
+                                </li>
+                                <li class="nav-item ">
+                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
+                                        <i class="fa-solid fa-cart-plus"></i>WatchList</a>
+                                </li>
+                                <li class="nav-item ">
+                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
+                                        <i class="fa-solid fa-cart-plus"></i>WatchList</a>
+                                </li>
+                            </div> -->
+
+
                         </div>
                     </div>
                 </div>
