--- a/index.html
+++ b/index.html
@@ -30,53 +30,34 @@
                 <div class="row h-100 align-items-center px-1">
                     <div class="col-2 ">
                         <a class="navbar-brand" href="javascript:void(0)" title="Trade Me- Life lives here">
-                            <img src="./assets/image/clipart1855289.png" class="logo ps-0 py-1 w-100">
+                            <img src="./assets/image/logo.png" class="logo ps-0 py-1 w-100">
                         </a>
 
                     </div>
 
-                    <div class="col-4 offset-6 bg-dark py-3 px-1">
-                        <div class="nav d-flex flex-row m-auto gx-1">
-                            <ul class="navbar-nav d-flex me-auto mb-2 mb-lg-0">
-                                <li class="nav-item d-none d-lg-block d-xl-none">
+                    <div class="col-4 offset-6 py-3 px-0">
+                        <div class="nav d-flex flex-row m-auto gx-1 ">
+                            <ul class="navbar-nav d-flex me-auto mb-2 mb-lg-0 ">
+                                <li class="nav-item align-items-center d-none d-md-block">
                                     <a class="nav-link active" aria-current="page" href="javascript:void(0)">
-                                        <img src="./assets/icon/binoculars.svg" class="mh-100"
-                                            style="width: 30x; height: 30px;"> WatchList </a>
+                                        <img src="./assets/icon/binoculars.svg" class="mh-100" width="25" height="25"
+                                            viewBox="0 0 50 50"> WatchList </a>
                                 </li>
-                                <li class="nav-item  d-none d-lg-block d-xl-none">
+                                <li class="nav-item  d-none d-md-block">
                                     <a class="nav-link active" aria-current="page" href="javascript:void(0)">
-                                        <img src="./assets/icon/love.svg" class="mh-100"
-                                            style="width: 30x; height: 30px;"> Favourites </a>
+                                        <img src="./assets/icon/love.svg" class="mh-100" width="25" height="25"
+                                            viewBox="0 0 50 50"> Favourites </a>
                                 </li>
-                                <li class="nav-item d-none d-lg-block d-xl-none ">
+                                <li class="nav-item d-none d-md-block ">
                                     <a class="nav-link " aria-current="page" href="javascript:void(0)">
-                                        <img src="./assets/icon/pencil.svg" class="mh-100"
-                                            style="width: 30x; height: 30px;"> Start a listing </a>
+                                        <img src="./assets/icon/pencil.svg" class="mh-100" width="25" height="25"
+                                            viewBox="0 0 50 50"> Start a listing </a>
                                 </li>
                                 <li class="nav-item d-block">
                                     <a class="nav-link " aria-current="page" href="javascript:void(0)">Trade Of Me
-                                        <img src="./assets/icon/user.svg" class="mh-100"
-                                            style="width: 30x; height: 30px;"></a>
+                                        <img src="./assets/icon/user.svg" class="mh-100 " width="25" height="25"
+                                            viewBox="0 0 50 50"></a>
                                 </li>
-
-                                <!-- <div class=" justify-content-center ms-auto bg-info">
-                                <li class="nav-item ">
-                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
-                                        <i class="fa-solid fa-cart-plus"></i>WatchList</a>
-                                </li>
-                                <li class="nav-item ">
-                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
-                                        <i class="fa-solid fa-cart-plus"></i>WatchList</a>
-                                </li>
-                                <li class="nav-item ">
-                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
-                                        <i class="fa-solid fa-cart-plus"></i>WatchList</a>
-                                </li>
-                                <li class="nav-item ">
-                                    <a class="nav-link active" aria-current="page" href="javascript:void(0)">
-                                        <i class="fa-solid fa-cart-plus"></i>WatchList</a>
-                                </li>
-                            </div> -->
 
 
                         </div>
@@ -91,7 +72,7 @@
     <script src="jquery/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
 
-    <!--script xu ly-->
+    <!--script parents-->
     <!-- <script src="app.js"></script> -->
 </body>
 </script>
