--- a/index.html
+++ b/index.html
@@ -37,29 +37,30 @@
 
                     <div class="col-4 offset-6 py-3 px-0">
                         <div class="nav d-flex flex-row m-auto gx-1 ">
-                            <ul class="navbar-nav d-flex me-auto mb-2 mb-lg-0 ">
-                                <li class="nav-item align-items-center d-none d-md-block">
+                            <ul class="navbar-nav d-flex me-auto mb-2 mb-lg-0 d-inline-flex">
+                                <li class="nav-item align-items-center flex-fill d-block ">
                                     <a class="nav-link active" aria-current="page" href="javascript:void(0)">
-                                        <img src="./assets/icon/binoculars.svg" class="mh-100" width="25" height="25"
-                                            viewBox="0 0 50 50"> WatchList </a>
+                                        <img src="./assets/icon/binoculars.svg" class="mh-100" width="16" height="16"
+                                            viewBox="0 0 16 16"> WatchList </a>
                                 </li>
-                                <li class="nav-item  d-none d-md-block">
+                                <li class="nav-item flex-fill d-none d-md-block">
                                     <a class="nav-link active" aria-current="page" href="javascript:void(0)">
-                                        <img src="./assets/icon/love.svg" class="mh-100" width="25" height="25"
-                                            viewBox="0 0 50 50"> Favourites </a>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                                            <path
+                                                d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
+                                        </svg> Favourites </a>
                                 </li>
-                                <li class="nav-item d-none d-md-block ">
+                                <li class="nav-item flex-filld d-none d-md-block ">
                                     <a class="nav-link " aria-current="page" href="javascript:void(0)">
-                                        <img src="./assets/icon/pencil.svg" class="mh-100" width="25" height="25"
-                                            viewBox="0 0 50 50"> Start a listing </a>
+                                        <img src="./assets/icon/pencil.svg" class="mh-100" width="16" height="16"
+                                            viewBox="0 0 16 16"> Start a listing </a>
                                 </li>
-                                <li class="nav-item d-block">
+                                <li class="nav-item flex-fill d-block">
                                     <a class="nav-link " aria-current="page" href="javascript:void(0)">Trade Of Me
                                         <img src="./assets/icon/user.svg" class="mh-100 " width="25" height="25"
-                                            viewBox="0 0 50 50"></a>
+                                            viewBox="0 0 25 25"></a>
                                 </li>
-
-
                         </div>
                     </div>
                 </div>
