--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nav bar</title>
+    <title>Buy & Sell on NZ's #1 Auction & Classified Site |Trade Me</title>
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 
     <!-- Font Awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
     <!--Style Css-->
     <!-- <link rel="stylesheet" href="style.css"> -->
@@ -18,70 +18,56 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!--icon browse tab-->
-    <link rel="shortcut icon" href="./assets/image/bird.png">
+    <link rel="shortcut icon" href="./assets/icon/icon-browser-website.png">
 </head>
 
 <body class=" layout-top-nav skin-green">
 
     <!--Navbar-->
-
-    <nav class=" navbar navbar-expand-md navbar-light bg-light ">
-        <div class="container bg-danger py-1">
-            <div class="row h-100 align-items-center">
-                <div class="col-2 col-md-2 d-block ">
-                    <div class="row">
-                        <div class="col">
-                            <a class="navbar-brand" href="javascript:void(0)" title="Trade Me- Life lives here">
-                                <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid">
-                            </a>
-                        </div>
-                        <div class="col-2 btn-group d-none d-md-block">
-                            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Browse
-                            </button>
-                        </div>
-                    </div>
-
+    <div class="container bg-danger ">
+        <div class="row navbar navbar-expand d-flex justify-content-between align-items-center bg-info " height="">
+            <div class="col">
+                <a class="navbar-brand" href="javascript:void(0)" title="Trade Me - Life lives here">
+                    <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid" width="150px">
+                </a>
+                <button class="btn btn-secondary btn-sm dropdown-toggle d-none d-md-inline d-print-block " type="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    Browse
+                </button>
+            </div>
+            <div class="col navbar-nav ">
+                <div class="nav-item">
+                    <span class="ml-2"></span>
+                    <button>
+                        <i class="fa-sharp fa-solid fa-binoculars fa-rotate-180"></i> WatchList
+                    </button>
                 </div>
-
-                <div class="col-6 offset-4 col-md-6 offset-md-4 text-center bg-body ">
-                    <div class=" nav d-flex flex-column align-self-">
-                        <ul class="navbar-nav d-flex justify-content-evenly w-100 me-auto">
-                            <li class="nav-item  flex-fill d-inline-block ">
-                                <a class="nav-link active" aria-current="page" href="javascript:void(0)">
-                                    <img src="./assets/icon/binoculars.svg" class="mh-100" width="16" height="16"
-                                        viewBox="0 0 16 16">
-                                    WatchList </a>
-                            </li>
-                            <li class="nav-item flex-md-fill d-none d-md-block">
-                                <a class="nav-link " aria-current="page" href="javascript:void(0)">
-                                    <img src="./assets/icon/love.svg" class="mh-100" width="16" height="16"
-                                        viewBox="0 0 16 16">
-                                    Favourites </a>
-                            </li>
-                            <li class="nav-item flex-md-fill d-none d-md-block ">
-                                <a class="nav-link " aria-current="page" href="javascript:void(0)">
-                                    <img src="./assets/icon/pencil.svg" class="mh-100" width="16" height="16"
-                                        viewBox="0 0 16 16"></br>
-                                    Start a listing </a>
-
-                            </li>
-                            <li class="nav-item flex-fill d-inline-block ms-auto">
-                                <a class="nav-link " aria-current="page" href="javascript:void(0)">My Trade Me
-                                    <img src="./assets/icon/user.svg" class="mh-100 " width="20" height="20"
-                                        viewBox="0 0 20 20"></a>
-                            </li>
-                        </ul>
-                    </div>
+                <div class="nav-item d-none d-md-block">
+                    <span class="ml-2"></span>
+                    <button>
+                        <i class="fa-regular fa-heart"></i> Favourites
+                    </button>
+                </div>
+                <div class="nav-item d-none d-md-block ">
+                    <span class="ml-2"></span>
+                    <button>
+                        <i class="fa-solid fa-pen"></i>Start a listing
+                    </button>
+                </div>
+                <div class="nav-item ">
+                    <span class="ml-2"></span>
+                    <button>
+                        My Trade Me <i class="fa-solid fa-user"></i>
+                    </button>
                 </div>
             </div>
         </div>
-    </nav>
+    </div>
+
 
 
     <!--Bootstrap version v5.0.2-->
-    <script src="jquery/jQuery-3.6.3.min.js"></script>
+    <script src="jquery/jQuery-2.6.2.min.js"></script>
     <script src="jquery/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
 
